# docker-yt-dlp

./: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  run.old.sh  run.py  run.sh
docker_yt_dlp.egg-info/: PKG-INFO  SOURCES.txt
src/: Dockerfile  run.py
